--- a/styles/modules/sections/_navbar.scss
+++ b/styles/modules/sections/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   color: white;
@@ -40,6 +40,7 @@
 }
 
 .navbar .bar {
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
